# csgo_gsi

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  flake.nix
src/: config.rs  csgo.rs  error.rs  gokz.rs  install_dir.rs  lib.rs  server.rs
src/event/: game_info.rs  map.rs  mod.rs  player.rs  round.rs
src/server/: config.rs  mod.rs
