[package]
name = "csgo_gsi"
version = "0.1.0"
description = "CS:GO GSI Implementation for Rust."
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/AlphaKeks/csgo_gsi"
license-file = "./LICENSE"
publish = true

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
vdf-serde = "0.3"

tokio = { version = "1", features = ["full"] }

axum = { version = "0.6", features = ["macros"] }

gokz_rs = { version = "0.18", optional = true }

[dev-dependencies]
color-eyre = "0.6"

[features]
gokz = ["dep:gokz_rs"]
