[package]
name = "schnose_gsi"
version = "0.2.0"
description = "CS:GO GSI Implementation for Rust."
categories = ["api-bindings", "asynchronous", "data-structures", "games"]
keywords = ["csgo", "valve", "kreedz", "kz", "gokz"]
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/AlphaKeks/schnose_gsi"
license-file = "./LICENSE"
publish = true

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
vdf-serde = "0.3"

tokio = { version = "1", features = ["full"] }

axum = { version = "0.6", features = ["macros"] }

gokz_rs = { version = "0.18", optional = true }

[features]
gokz = ["dep:gokz_rs"]
