[package]
name = "schnose_gsi"
description = "Library for working with CS:GO GSI"
version = "0.5.1"
keywords = ["csgo", "gokz", "kz", "kreedz", "valve"]
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/AlphaKeks/schnose_gsi"
license-file = "./LICENSE"
publish = true

[features]
serde = ["dep:serde", "dep:serde_json", "dep:vdf-serde"]
server = ["serde", "dep:tokio", "dep:axum", "dep:tracing"]
gokz = ["serde", "dep:gokz_rs"]

[dependencies]
thiserror = "1.0.47"

serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
vdf-serde = { version = "0.3", optional = true }

tokio = { version = "1", optional = true, default-features = false, features = ["sync"] }
axum = { version = "0.6", optional = true }
tracing = { version = "0.1", optional = true }

gokz_rs = { version = "0.24.0", optional = true, features = ["serde", "chrono"] }
